appId: com.example.coloringapp
---
- launchApp

- tapOn:
    id: premium-home

- assertVisible:
    id: paywall

- tapOn:
    id: paywall-close

- assertVisible:
    id: home-screen
